--- a/.github/workflows/first-exampe.yml
+++ b/.github/workflows/first-exampe.yml
@@ -6,6 +6,9 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+        - name: Checkout Repo
+          uses: action/checkout@v4
+          
         - name: welcome message
           run: echo "My first github action job"
 
@@ -14,3 +17,4 @@ jobs:
 
         - name: Read the file
           run: cat README.md
+          
