--- a/.github/workflows/first-exampe.yml
+++ b/.github/workflows/first-exampe.yml
@@ -7,8 +7,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Checkout Repo
-          uses: action/checkout@v4
-          
+          uses: actions/checkout@v4
+
         - name: welcome message
           run: echo "My first github action job"
 
