multi-line step and cowsay cmd

--- a/.github/workflows/first-exampe.yml
+++ b/.github/workflows/first-exampe.yml
@@ -9,12 +9,18 @@ jobs:
         - name: Checkout Repo
           uses: actions/checkout@v4
 
-        - name: welcome message
-          run: echo "My first github action job"
+        - name: List and read files
+          run: |
+            echo "My first github action job"
+            ls -ltra
+            cat READM.me
 
-        - name: List the file
-          run: ls
+        - name: Generate ASCII Artwork
+          run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
 
-        - name: Read the file
-          run: cat README.md
+        # - name: List the file
+        #   run: ls
+
+        # - name: Read the file
+        #   run: cat README.md
           
