--- a/.github/workflows/first-exampe.yml
+++ b/.github/workflows/first-exampe.yml
@@ -13,7 +13,7 @@ jobs:
           run: |
             echo "My first github action job"
             ls -ltra
-            cat READM.me
+            cat README.md
 
         - name: Generate ASCII Artwork
           run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
