--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -12,7 +12,9 @@ jobs:
         - name: List Repo Files
           run: ls -ltra
 
-        - name: Install Cowsay Program
-          run: ./ascii-script.sh
+        - name: Executing Cowsay Program
+          run: |
+              chmod +x ascii-script.sh
+              ./ascii-script.sh
           
        
