--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -26,7 +26,7 @@ jobs:
           run: grep -i "dragon" dragon.txt
 
     deploy_job_3:
-        runs-on: ubuntu-lates
+        runs-on: ubuntu-latest
         steps:
         - name: Read file
           run: cat dragon.txt
