--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -12,27 +12,40 @@ jobs:
         - name: Execute cowsay cmd
           run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt
 
-        - name: Sleep for 30 seconds
-          run: sleep 30
+        - name: upload file
+          uses: actions/upload-artifact@v3
+          with:
+            name: dragon-artifact 
+            path: dragon.txt
 
     
     test_job_2:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Sleep for 10 seconds
-          run: sleep 10
+      needs: build_job_1
+      runs-on: ubuntu-latest
+      steps:
+      - name: download file
+        uses: actions/download-artifact@v3
+        with:
+          name: dragon-artifact 
 
-        - name: Test file exists
-          run: grep -i "dragon" dragon.txt
+      - name: Test file exists
+        run: grep -i "dragon" dragon.txt
 
     deploy_job_3:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Read file
-          run: cat dragon.txt
+      needs: test_job_2
+      runs-on: ubuntu-latest
+      steps:
+      - name: download file
+        uses: actions/download-artifact@v3
+        with:
+          name: dragon-artifact 
+            
+
+      - name: Read file
+        run: cat dragon.txt
         
-        - name: Deploy
-          run: echo Deploying........
+      - name: Deploy
+        run: echo Deploying........
 
           
        
