--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -67,7 +67,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Docker Build
-          run: docjer build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
 
         - name: Docker Login
           env:
