--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -67,12 +67,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Docker Build
-          run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: echo docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
 
         - name: Docker Login
           env:
             DOCKER_PASSWORD: s3cUrePassw0rd
-          run: docker login --username=$CONTAINER_REGISTRY/$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+          run: echo docker login --username=$CONTAINER_REGISTRY/$DOCKER_USERNAME --password=$DOCKER_PASSWORD
 
         - name: Docker Publish
           run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
