--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -5,7 +5,6 @@ on:
 
 env: 
     CONTAINER_REGISTRY: docker.io
-    DOCKER_USERNAME: tambekrish
     IMAGE_NAME: github-actions-nginx
 jobs:
     #docker:
@@ -67,12 +66,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Docker Build
-          run: echo docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
 
         - name: Docker Login
-          env:
-            DOCKER_PASSWORD: s3cUrePassw0rd
-          run: echo docker login --username=$CONTAINER_REGISTRY/$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+          run: echo docker login --username=$DOCKER_USERNAME --password=${{ secrets.DOCKER_PASSWORD }}
 
         - name: Docker Publish
           run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
