--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -33,22 +33,22 @@ jobs:
 #        - name: Docker Build
 #          env:
 #            CONTAINER_REGISTRY: docker.io
-#            DOCKER_USERNAME: tambekrish
+#            {{ vars.DOCKER_USERNAME }}: tambekrish
 #            IMAGE_NAME: github-actions-nginx
-#          run: echo docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
-#          #run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#          run: echo docker build -t $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+#          #run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 #        - name: Docker Login
 #          env:
 #            DOCKER_PASSWORD: s3cUrePassw0rd
-#            DOCKER_USERNAME: $DOCKER_USERNAME
-#          run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+#            {{ vars.DOCKER_USERNAME }}: ${{ vars.DOCKER_USERNAME }}
+#          run: echo docker login --username=${{ vars.DOCKER_USERNAME }} --password=$DOCKER_PASSWORD
         
 #        - name: Docker Puilsh
 #          env:
 #            CONTAINER_REGISTRY: docker.io
-#            DOCKER_USERNAME: tambekrish
+#            {{ vars.DOCKER_USERNAME }}: tambekrish
 #            IMAGE_NAME: github-actions-nginx
-#          run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#          run: echo docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
 #    deploy:
 #        needs: docker
@@ -57,27 +57,27 @@ jobs:
 #        - name: Docker Run
 #          env: 
 #            CONTAINER_REGISTRY: docker.io
-#            DOCKER_USERNAME: tambekrish
+#            {{ vars.DOCKER_USERNAME }}: tambekrish
 #            IMAGE_NAME: github-actions-nginx
-#          run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#          run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
 ######################### environment variales at Step Level ########################
     docker: 
         runs-on: ubuntu-latest
         steps:
         - name: Docker Build
-          run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
         - name: Docker Login
-          run: echo docker login --username=$DOCKER_USERNAME --password=${{ secrets.DOCKER_PASSWORD }}
+          run: echo docker login --username=${{ vars.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
 
         - name: Docker Publish
-          run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: echo docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
     deploy:
         needs: docker
         runs-on: ubuntu-latest
         steps: 
         - name: Docker Run
-          run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+          run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
