--- a/.github/workflows/matrix-configuration.yml
+++ b/.github/workflows/matrix-configuration.yml
@@ -7,8 +7,9 @@ on:
 jobs:
     deploy:
       strategy:
-        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
-        images: [hello-world, alpine]
+        matrix:
+         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
+         images: [hello-world, alpine]
       runs-on: ${{ matrix.os }}
       steps:
        - name: Echo Docker Details
