added if expression

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -4,7 +4,7 @@ on:
     workflow_dispatch:
   #  schedule:
   #    - cron: "*/1 * * * *"
-#    push
+    push:
 
 env: 
     CONTAINER_REGISTRY: docker.io
@@ -78,15 +78,16 @@ jobs:
           run: echo docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
     deploy:
-        needs: docker
-        concurrency: 
-            group: production-deployment
-            cancel-in-progress: false
-        runs-on: ubuntu-latest
-        steps: 
-        - name: Docker Run
-          timeout-minutes: 1
-          run: | 
-            echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
-            sleep 6000s
+      if: github.ref == 'refs/heads/main'
+      needs: docker
+      concurrency: 
+        group: production-deployment
+        cancel-in-progress: false
+      runs-on: ubuntu-latest
+      steps: 
+      - name: Docker Run
+        timeout-minutes: 1
+        run: | 
+          echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+          sleep 6000s
 
