--- a/.github/workflows/context-testing.yml
+++ b/.github/workflows/context-testing.yml
@@ -9,7 +9,7 @@ jobs:
             env:
               GITHUB_CONTEXT: ${{ toJson(github) }}
             run: echo "$GITHUB_CONTEXT"
-          - name:
+          - name: Dump job context
             env:
               JOB_CONTEXT: ${{ toJson(job) }}
             run: echo "$JOB_CONTEXT"
