--- a/.github/workflows/actions2.yml
+++ b/.github/workflows/actions2.yml
@@ -3,7 +3,7 @@ name: Update GitHub Actions (non-breaking)
 on:
   workflow_dispatch:           # Manual trigger option
   schedule:
-    - cron: '0 3 * * 1'         # Every Monday at 03:00 UTC (e.g., 8:30 AM IST)
+    - cron: '*/10 * * * *'         # Every Monday at 03:00 UTC (e.g., 8:30 AM IST)
 
 jobs:
   update-actions:
