--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,24 +1,9 @@
-name: weekly Acrions Update Check
+name: Minutes Acrions Update Check
 
 on:
     schedule:
-      - cron: '*/10 * * * *'
+      - cron: '* * * * *'
     workflow_dispatch: 
-
-# jobs:
-#     check-update:
-#       runs-on: ubuntu-latest
-#       steps:
-#         - uses: actions/checkout@v3
-#         - uses: actions/setup-node@v3
-#           with:
-#             node-version: '20'
-#         - run: npm install -g actions-up
-#         - run: |
-#              if actions-up --dry-run | grep -q "→"; then
-#                 echo "Updates available! Run npx actions-up" to update
-#                 exit 1
-#              fi
 
 jobs:
   check-actions:
