--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,8 @@
-name: Minutes Acrions Update Check
+name: Weekly Acrions Update Check
 
 on:
     schedule:
-      - cron: '*/10 * * * *'
+      - cron: '* * * * *'
     workflow_dispatch: 
 
 jobs:
