--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,8 @@
 name: New Weekly Acrions Update Check
 
 on:
-    schedule:
-      - cron: '* * * * *'
+    #schedule:
+     # - cron: '* * * * *'
     workflow_dispatch: 
 
 jobs:
